src/test/deca/context/valid/SansObjet/DeclVar-EQ-boolean-float-float.deca
// Description:
//    Declaration of a boolean variable using == operation between a float variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    float y = 0.1; 
    boolean z = x == y ; 
}
